# smlnj-legacy

./: .gitignore  CMakeLists.txt
base/runtime/: CMakeLists.txt
base/runtime/c-libs/: CMakeLists.txt
base/runtime/c-libs/dl/: CMakeLists.txt
base/runtime/c-libs/posix-error/: CMakeLists.txt
base/runtime/c-libs/posix-filesys/: CMakeLists.txt
base/runtime/c-libs/posix-io/: CMakeLists.txt
base/runtime/c-libs/posix-os/: CMakeLists.txt
base/runtime/c-libs/posix-procenv/: CMakeLists.txt
base/runtime/c-libs/posix-process/: CMakeLists.txt
base/runtime/c-libs/posix-signal/: CMakeLists.txt
base/runtime/c-libs/posix-sysdb/: CMakeLists.txt
base/runtime/c-libs/posix-tty/: CMakeLists.txt
base/runtime/c-libs/smlnj-ccalls/: CMakeLists.txt  cutil.c
base/runtime/c-libs/smlnj-date/: CMakeLists.txt
base/runtime/c-libs/smlnj-math/: CMakeLists.txt
base/runtime/c-libs/smlnj-mp/: CMakeLists.txt
base/runtime/c-libs/smlnj-prof/: CMakeLists.txt
base/runtime/c-libs/smlnj-runtime/: CMakeLists.txt
base/runtime/c-libs/smlnj-signals/: CMakeLists.txt
base/runtime/c-libs/smlnj-sockets/: CMakeLists.txt
base/runtime/c-libs/smlnj-time/: CMakeLists.txt
base/runtime/config/: CMakeLists.txt  gen-regmask.c
base/runtime/gc/: CMakeLists.txt
base/runtime/include/: ml-regmask.h.in  ml-sizes.h.in  system-signals.h.in
base/runtime/kernel/: CMakeLists.txt
base/runtime/mach-dep/: CMakeLists.txt
base/runtime/memory/: CMakeLists.txt
base/runtime/mp/: CMakeLists.txt
smlnj-lib/JSON/: errors.sml  json-decode.sml
test/: Makefile  README.md  smlnj-test.cm  smlnj-test.sig  smlnj-test.sml
test/json-lib/: test.cm  test.sml
test/json-lib/data/JSONParser-parse-file/: ascii-escapes.output  ascii-string.input  double-huge-neg-exp.input  duplicate-keys.input  int-huge-exp.input  invalid-utf8-invalid-codepoint.input  invalid-utf8-overlong.output  real-neg-overflow.input  real-pos-overflow.output  real-pos-underflow.input  real-pos-underflow.output  solidus-forms.output
test/json-lib/data/JSONParser-parse-string/: ascii-string.output  duplicate-keys.output  invalid-utf8-overlong.input  invalid-utf8-truncated.input  json-with-bom.input  json-with-bom.output  neg-int-huge-exp.input  number-variations.input  number-variations.output  real-pos-overflow.input  scalars.output  solidus-forms.input  string-surrogate.output  string-unicode.input  string-unicode.output  unicode-escapes.input  unicode-escapes.output
